<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewcontrollers.TurretConnectionActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/layout_start_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/turret_connection_page_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/connect_to_turret"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/layout_start_guide" />

    <TextView
        android:id="@+id/turret_ip_field_label"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/field_turret_ip"
        app:layout_constraintBottom_toTopOf="@+id/field_turret_ip"
        app:layout_constraintStart_toStartOf="@+id/field_turret_ip"
        app:layout_constraintTop_toBottomOf="@+id/turret_connection_page_label"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/field_turret_ip"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="text"
        android:minWidth="240dp"
        app:layout_constraintBottom_toTopOf="@+id/turret_port_field_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/turret_ip_field_label" />

    <TextView
        android:id="@+id/turret_port_field_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/field_turret_port"
        app:layout_constraintBottom_toTopOf="@+id/field_turret_port"
        app:layout_constraintStart_toStartOf="@+id/field_turret_port"
        app:layout_constraintTop_toBottomOf="@+id/field_turret_ip" />

    <EditText
        android:id="@+id/field_turret_port"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/password_field_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/turret_port_field_label" />

    <TextView
        android:id="@+id/password_field_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/field_password"
        app:layout_constraintBottom_toTopOf="@+id/field_turret_password"
        app:layout_constraintStart_toStartOf="@+id/field_turret_password"
        app:layout_constraintTop_toBottomOf="@+id/field_turret_port" />

    <EditText
        android:id="@+id/field_turret_password"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minWidth="240dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_field_label" />

    <Button
        android:id="@+id/connect_button"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_connect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_turret_password"
        app:layout_constraintVertical_bias="0.18" />

</androidx.constraintlayout.widget.ConstraintLayout>
