<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewcontrollers.MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/turret_connection_page_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/pt_sans"
        android:text="@string/connect_to_turret"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/turret_ip_field_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/pt_sans"
        android:text="@string/field_turret_ip"
        app:layout_constraintBottom_toTopOf="@+id/field_turret_ip"
        app:layout_constraintEnd_toEndOf="@+id/field_turret_ip"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/field_turret_ip"
        app:layout_constraintTop_toBottomOf="@+id/turret_connection_page_label"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/field_turret_ip"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="218dp"
        android:ems="10"
        android:inputType="number"
        android:minWidth="240dp"
        app:layout_constraintWidth_max="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/password_field_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/pt_sans"
        android:text="@string/field_password"
        app:layout_constraintBottom_toTopOf="@+id/password_dialog"
        app:layout_constraintEnd_toEndOf="@+id/password_dialog"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_dialog"
        app:layout_constraintTop_toBottomOf="@+id/field_turret_ip" />

    <EditText
        android:id="@+id/password_dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minWidth="240dp"
        app:layout_constraintWidth_max="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_turret_ip" />

    <Button
        android:id="@+id/connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/pt_sans"
        android:text="@string/btn_connect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_dialog"
        app:layout_constraintVertical_bias="0.100000024" />

</android.support.constraint.ConstraintLayout>
