<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewcontrollers.TurretControlActivity"
    tools:layout_editor_absoluteY="25dp">

    <org.webrtc.SurfaceViewRenderer
        android:id="@+id/video_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/arm_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:showText="true"
        android:textOff="@string/safety_on"
        android:textOn="@string/safety_off"
        app:layout_constraintBottom_toBottomOf="@+id/video_view"
        app:layout_constraintEnd_toEndOf="@+id/video_view"
        app:layout_constraintStart_toStartOf="@+id/video_view"
        app:layout_constraintTop_toTopOf="@+id/video_view"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/fire_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/fire_button"
        android:text="@string/btn_fire"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <io.github.controlwear.virtual.joystick.android.JoystickView
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/analog_stick"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="8dp"
        android:alpha="0.5"
        custom:JV_buttonSizeRatio="15%"
        custom:JV_borderColor="@color/white"
        custom:JV_borderWidth="4dp"
        custom:JV_backgroundColor="@color/colorPrimaryLight"
        custom:JV_fixedCenter="true"
        custom:JV_buttonColor="@color/blackDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"/>

    <ImageView
        android:id="@+id/crosshair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/video_view"
        app:layout_constraintEnd_toEndOf="@+id/video_view"
        app:layout_constraintStart_toStartOf="@+id/video_view"
        app:layout_constraintTop_toTopOf="@+id/video_view"
        app:srcCompat="@drawable/crosshair"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>
